GNOME Bugzilla – Bug 777364
Recipes have empty name in gnome-shell overview
Last modified: 2017-02-08 03:05:22 UTC
Created attachment 343608 [details] recipes in overview (image) When recipes home page is kept open, empty name is displayed in gnome-shell overview. It shall be better to have the name "Recipes" (or its translation as per locale) Please see the attached screenshot. Thanks
How old is your version and where did you install it from? Mine (flatpak, 0.6.0-93-gba38d60) displays "recipes" when on the home screen, and the recipe name when on a recipe page.
(In reply to Alexandre Franke from comment #1) > How old is your version and where did you install it from? Mine (flatpak, > 0.6.0-93-gba38d60) displays "recipes" when on the home screen, and the > recipe name when on a recipe page. I was on git master with native install (./configure && make && make install). From the current git master, I can't reproduce this anymore. I don't know what have changed since then. Anyway, closing.
I should have checked this thoroughly before. Anyway, this bug is still present in master. How to reproduce: 1. Open Recipes app 2. Click on some recipe in 'Recipes' page 3. Click back button so that the 'Recipes' page is shown again. 4. Check the name in gnome-shell Overview Result: Recipes app have an empty name in gnome-shell Overview. Thanks