Make sure we set window titles consistently

It was possible to end up in a situation where the window has
no title, which causes it to show up in a suboptimal way in
the GNOME shell overview. Fix this by setting the initial title
to "Recipes", and explicitly setting it when we have no saved
title.

https://bugzilla.gnome.org/show_bug.cgi?id=777364